# CS3203

./: .gitignore  README.md
Team34/Code34/src/spa/: CMakeLists.txt
Team34/Code34/src/spa/include/: PKB.h  arena.h  ast.h  design_extractor.h  exceptions.h  frontend.h  logging_control.h  pkb.h  simple_parser.h  timer.h  util.h
Team34/Code34/src/spa/include/pkb/: exception.h
Team34/Code34/src/spa/include/pql/: ast.h  exception.h  parser.h
Team34/Code34/src/spa/include/pql/eval/: common.h  evaluator.h  solver.h  table.h
Team34/Code34/src/spa/include/pql/parser/: ast.h  parser.h
Team34/Code34/src/spa/include/simple/: ast.h  parser.h
Team34/Code34/src/spa/src/: DesignExtractor.cpp  PKB.cpp  PKB.h  Parser.cpp  Parser.h  TNode.h  pkb.cpp
Team34/Code34/src/spa/src/frontend/: ast.cpp  file.cpp  lexer.cpp  parser.cpp
Team34/Code34/src/spa/src/pkb/: call_graph.cpp  cfg.cpp  design_extractor.cpp  pkb.cpp  procedure.cpp  statement.cpp  variable.cpp
Team34/Code34/src/spa/src/pql/: ast.cpp  lexer.cpp  parser.cpp
Team34/Code34/src/spa/src/pql/eval/: affects.cpp  calls.cpp  common.cpp  evaluator.cpp  follows.cpp  modifies.cpp  next.cpp  next_affects_bip.cpp  parent.cpp  pattern.cpp  solver.cpp  table.cpp  uses.cpp  uses_modifies.cpp  with.cpp
Team34/Code34/src/spa/src/pql/parser/: ast.cpp  destructors.cpp  lexer.cpp  parser.cpp  stringify.cpp
Team34/Code34/src/spa/src/simple/: ast.cpp  destructors.cpp  lexer.cpp  parser.cpp  pattern_matching.cpp  stringify.cpp
Team34/Code34/src/spa/src/util/: arena.cpp  file.cpp  misc.cpp  pattern_matching.cpp  subtree.cpp
(+117 files in other folders)
